--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,7 +4,7 @@
     --primary: #141c3a;
     --primary-light: #cdd3eb;
     --primary-foreground: #fff;
-    --secondary: #80f8c6;
+    --secondary: #8edf0d;
     --secondary-foreground: #141c3a;
 }
 
